[project]
name = "mobstr3D"
version = "1.0.3"
dependencies = [
    "jax==0.7.0",
    "loguru==0.7.3",
    "matplotlib==3.10.8",
    "nibabel==5.3.3",
    "numpy==2.2.6",
    "pandas==2.3.2",
    "pydicom==3.0.1",
    "pyvista==0.46.5",
    "scipy==1.15.3",
    "tomli==2.2.1",
    "tomli_w==1.2.0",
    "tqdm==4.67.1",
    "trimesh==4.6.10",
    "opencv-python==4.12.0.88"
]
